src/main/java/com/example/management_system/controller/errors/TaskNotFoundException.java
package com.example.management_system.controller.errors;

public class TaskNotFoundException extends RuntimeException{
    public TaskNotFoundException(String message) {
        super(message);
    }
}
